--- a/tex/1-1-scope.tex
+++ b/tex/1-1-scope.tex
@@ -180,11 +180,11 @@
     }
 \end{lstlisting}
 
-Представим что есть два файла, <<function.h>> и <<main.cpp>>. Фрагменты, соответствующие файлам, помечены
+Допустим, существует два файла с исходным кодом: <<function.h>> и <<main.cpp>>. Фрагменты, соответствующие файлам, помечены
 комментариями. При статическом анализе такого кода для определения того, какая версия функции в итоге будет
 сгенерирована при компиляции необходимо сделать следующее:
 \begin{enumerate}[1)]
-    \item узнать какие значения принимают переменные среды при компиляции этих файлов,
+    \item узнать значения переменных среды при компиляции этих файлов,
     \item для каждого из таких значений сгенерировать возможную конфигурацию кода,
     \item проанализировать каждую конфигурацию и объединить результаты анализа.
 \end{enumerate}
@@ -246,14 +246,14 @@
 среды или реестр, подключение к сети и т.д. 
 
 В данной работе проблема выборки файлов для анализа
-не рассматривается, так как она несущественна для формирования метода межъязыкового анализа, 
+не рассматривается, так как она несущественна для разработки метода межъязыкового анализа, 
 который независим от какого-либо анализатора, его использующего.
 
 \subsection{Динамическая и неявная природа межъязыковых связей}
 
 Многие семантически важные связи в реальных мультиязыковых проектах являются неявными. В большей части это применимо
-к фреймворкам и системам сборки, так как порой семантическая информация распределена в разных местах проекта,
-вовлекая при этом и системные зависимости \cite{professional-developers} \cite{external-dependencies}.
+к фреймворкам и системам сборки, так как часто семантическая информация не локализована в каком-либо конкретном
+фрагменте кода. При этом, конфигурация проекта усложняется вовлекаемыми системными зависимостями \cite{professional-developers} \cite{external-dependencies}.
 
 С точки зрения практической реализации, неявные связи являются усложняющим обстоятельством, но не
 делающим анализ невозможным. К сожалению, то же нельзя сказать в отношении динамических связей. Под
