--- a/tex/1-2-current-state.tex
+++ b/tex/1-2-current-state.tex
@@ -188,9 +188,9 @@ WASM является низкоуровневым языком программ
 
 
 \begin{table}[h]
-    \caption{Состояние существующих анализаторов}
+    \caption{\textbf{Состояние существующих анализаторов}}
     \resizebox{1 \textwidth}{!}{\begin{tabular}{|p{2.8cm}|p{2.5cm}|p{3cm}|p{3cm}|p{3cm}|p{3.3cm}|}
-    \hline Анализатор\slash Метод & Парадигма & Способ извлечения знаний & Вовлекаемые языки & Сценарии использования & Недостатки подхода \\
+    \hline \textbf{Анализатор\slash Метод} & \textbf{Парадигма} & \textbf{Способ извлечения знаний} & \textbf{Вовлекаемые языки} & \textbf{Сценарии использования} & \textbf{Недостатки подхода} \\
     \hline Pangea (\ref{ssec:pangea}) & ОО & OMS и Moose модели & Java, C++, C\# & Сборка метрик и анализ систем & Сложная онтологическая модель; Ограничение ОО языками; \\ 
     \hline JNI связи (\ref{ssec:jni}) & OO\slash Procedural & Лексическое сопоставление & Java\slash C++ & Анализ FFI вызовов & Лексическое сравнение; Анализ исключительно функций; \\
     \hline MLSA (\ref{ssec:mlsa}) & OO\slash Procedural & Interop\slash Multilangual фильтры & C++\slash Python & Анализ FFI вызовов; Получение зависимостей & Большое количество межъязыковых анализаторов \\
