--- a/tex/1-3-requirements.tex
+++ b/tex/1-3-requirements.tex
@@ -2,17 +2,17 @@
 
 \section{Цели и задачи}
 
-Цель данной работы: <<Упрощение процессов разработки ПО, путем создания метода выявления межъязыковых связей,
-позволяющего обеспечивать корректность и расширяемость соответствующих средств.>>
+Цель данной работы: Упрощение процессов разработки ПО, путем создания метода выявления межъязыковых связей,
+позволяющего обеспечивать корректность и расширяемость соответствующих средств.
 
 Для достижения данной цели необходимо решить следующие задачи:
 \begin{enumerate}[1)]
     \item изучить предметную область, а именно индустрию разработки ПО,
-    \item провести исследование текущих решений в области межъязыкового анализа,
-    \item разработать требования к методу и спроектировать его архитектуру,
+    \item провести исследование существующих решений в области межъязыкового анализа,
+    \item разработать требования к реализации и её программную архитектуру,
     \item описать прикладные сценарии использования метода и соответствующего анализатора,
-    \item создать первичную реализацию анализатора, поддерживающего определенный набор языков,
-    \item провести оценку показателей анализатора на избранных тестовых проектах.
+    \item создать прототип анализатора, поддерживающего определенный набор языков,
+    \item выполнить оценку показателей анализатора на избранных тестовых проектах.
 \end{enumerate}
 
 
