--- a/tex/1-4-crosslingual-analysis.tex
+++ b/tex/1-4-crosslingual-analysis.tex
@@ -1,5 +1,5 @@
-\chapter{Анализ существующих подходов к статическому анализу, проектирование архитектуры и
-исследование средств реализации}
+\chapter{Анализ существующих подходов к статическому анализу, разработка метода и
+исследование средств реализации соответствующего анализатора}
 
 \section{Виды структур представления информации в статическом анализе}
 
@@ -99,7 +99,7 @@ INI.
 понятий по онтологическим признакам в определенные графы свойств. Таким образом, так или иначе
 такая модель должна реализовывать формат семантической сети в общем случае.
 
-\section{Архитектура метода анализа} \label{sec:architecture}
+\section{Описание метода анализа} \label{sec:architecture}
 
 \subsection{Парсинг мультиязыковых фрагментов кода}
 
@@ -147,7 +147,7 @@ INI.
 трансляция определенного языка будет вовлекать распознавание фрагментов языков, описанных через строковые литералы.
 После распознавания такие фрагменты будут направлены соответствующим трансляторам.
 
-Таким образом, общий алгоритм трансляции выглядит следующим образом:
+Таким образом, общий процесс трансляции выглядит следующим образом:
 \begin{enumerate}[1)]
     \item на вход транслятору поступает фрагмент кода на определенном языке,
     \item транслятор использует любые подходящие средства для анализа и трансляции данного кода
@@ -157,7 +157,7 @@ INI.
     \item все трансляторы всех языков выводят ограничения в общий буфер, для последующего разрешения.
 \end{enumerate}
 
-Как видно из алгоритма, универсальное представление позволяет реализовывать гибкий анализ кода --
+Как видно из списка, универсальное представление позволяет реализовывать гибкий анализ кода --
 сам процесс анализа зависит от конкретного транслятора и может вовлекать любые методы, вплоть до интерпретации
 или компиляции. Также такая трансляция происходит независимо от остальных трансляторов, что
 позволяет проводить анализ проектов инкрементально и по требованию.
@@ -381,11 +381,11 @@ INI.
 Обнаружение таких межъязыковых связей может быть нежелательно для разработчика инструментального средства и
 избежать этого можно путем последующей интрепретации решенных ограничений с учетом межъязыковых границ.
 
-\subsection{Онтология} \label{ssec:ontology}
+\subsection{Онтология как механизм поддержания согласованности} \label{ssec:ontology}
 
 Онтологией обычно называется набор определенных знаний о предметной области.
 Однако, в контексте данной работы такой термин будет использоваться для иных целей -- им будет
-обозначаться набор механизмов, позволяющих \textit{обеспечивать консистентность} между различными
+обозначаться механизм, позволяющий \textit{обеспечивать согласованность} между различными
 трансляторами различных языков. Такое название для группы данных механизмов было выбрано
 в первую очередь для сохранения изначального смысла определения -- вне зависимости от того,
 каким образом онтология может быть реализована (например, как набор механизмов сохранения консистентности),
