--- a/tex/2-1-tooling.tex
+++ b/tex/2-1-tooling.tex
@@ -8,9 +8,9 @@
 возможности анализатора отражены в таблице \ref{analysis-tooling}.
 
 \begin{table}[h]
-    \caption{Поддержка анализатором различных сценариев использования инструментальных средств}
+    \caption{\textbf{Поддержка анализатором различных сценариев использования инструментальных средств}}
     \resizebox{1 \textwidth}{!}{\begin{tabular}{|p{3cm}|p{3cm}|p{10cm}|}
-    \hline Сценарий использования & Поддержка & Необходимая информация \\ 
+    \hline \textbf{Сценарий использования} & \textbf{Поддержка} & \textbf{Необходимая информация} \\ 
     \hline Обнаружение багов & Частично & Идентификаторы; типы идентификаторов; значения идентификаторов; языкоспецифичная информация \\
     \hline Обнаружение уязвимостей & Отсутствует & Полная информация о системном окружении; знание уязвимостей различных библиотек и фреймворков \\
     \hline Соблюдение стиля кода и стандартов & Частично & Полный доступ к тексту и языкоспецифичному AST \\
@@ -81,9 +81,9 @@
 
 В таблице \ref{lsp_functionality} представленно разделение приведенных сценариев на основе необходимой для анализа информации.
 \begin{table}[H]
-    \caption{Разделение сценариев по требуемой информации}\label{lsp_functionality}
+    \caption{\textbf{Разделение сценариев по требуемой информации}}\label{lsp_functionality}
     \begin{tabular}{|p{5.0cm}|p{5.0cm}|p{5.0cm}|}
-    \hline Сценарий & Назначение & Необходимая информация \\
+    \hline \textbf{Сценарий} & \textbf{Назначение} & \textbf{Необходимая информация} \\
     \hline Поиск объявления или определения & Навигация по коду & Информация о областях видимости; информация о типах \\
     \hline Определение иерархии вызовов & Навигация по коду & Информация о областях видимости; информация о типах \\
     \hline Поиск ссылок на идентификатор & Навигация, редактирование & Информация о областях видимости; информация о типах \\
