--- a/tex/2-2-implementation.tex
+++ b/tex/2-2-implementation.tex
@@ -13,7 +13,7 @@
 \begin{enumerate}[1)]
     \item провайдер конфигурации и кода,
     \item мультиязыковой транслятор,
-    \item решатель ограничений,
+    \item средство решения ограничений,
     \item адаптер для конкретного инструментального средства (в данном случае LSP сервера).
 \end{enumerate}
 
@@ -32,7 +32,7 @@
 \begin{figure}[H]
     \centering
     \resizebox{\linewidth}{!}{\includegraphics[height=0.85\textheight]{inc/img/sequence}}
-    \caption{Диаграмма деятельности анализатора}
+    \caption{Диаграмма последовательности анализатора}
     \label{fig:sequence}
 \end{figure}
 
@@ -41,7 +41,7 @@
     \item диаграммы представлены на русском языке, на довольно высоком уровне -- это сделано с целью упрощения
     понимания компонентов анализатора,
     \item на диаграммах не представленно кеширование результатов анализа,
-    \item на диаграмме деятельности представлен самый благоприятный сценарий, без возникновения ошибок -- в случае ошибок
+    \item на диаграмме последовательности представлен самый благоприятный сценарий, без возникновения ошибок -- в случае ошибок
     используется стандартный механизм возврата ошибок JSON-RPC \cite{JSON-RPC}.
 \end{enumerate}
 
@@ -149,7 +149,7 @@
 анализатора не реализован инкрементальный подход к извлечению конфигурации и трансляции, однако концептуальных
 препятствий к этому нет и такие процессы могут быть организованы инкрементально для повышения быстродействия.
 
-\section{Решатель ограничений} \label{sec:solver}
+\section{Средство решения ограничений} \label{sec:solver}
 
 Алгоритм решения ограничений подробно описан в \cite{scope-graphs-static-analysis} и в данной работе не изменяется.
 Дополнительные ограничения, вводимые в данной работе служат лишь дополнительным источником информации для
@@ -161,7 +161,7 @@
 принебречь полнотой анализа и брать первое совпадающее определение.
 
 В результате работы алгоритма решения ограничений формируется типовый контекст $\psi$ и известный граф областей
-$G$. С точки зрения решателя это означает, что можно сформировать \textit{решенные ограничения} -- ограничения,
+$G$. С точки зрения средства решения ограничений это означает, что можно сформировать \textit{решенные ограничения} -- ограничения,
 в которых не присутствуют неизвестные переменные. Такие ограничения можно называть фактами о проекте.
 
 Стоит заметить, что в случае неполного решения ограничений (алгоритм заходит в тупик при наличии необработанных ограничений),
@@ -202,7 +202,7 @@ $G$. С точки зрения решателя это означает, что
 Тогда, в большем графе $G'$, в котором объявление $d_j$ находится уже в самой области $S$, ссылка $r_i$ неизбежно
 будет разрешена именно в это объявление, а старое объявление из $S'$ будет затенено.
 Таким образом, при увеличении графа, предыдущие результаты решения графа могут оказаться неверными, что
-может обязывать в необходимости запуска решателя еще один раз.
+может обязывать в необходимости запуска решения ограничений очередной раз.
 
 Как было сказано в \ref{sec:solver}, нерешенные ограничения не могут быть использованы напрямую как источник
 ошибок, по крайней мере это не было доказано. Именно поэтому список ограничений был дополнен \textit{ограничениями консистентности},
@@ -210,7 +210,7 @@ $G$. С точки зрения решателя это означает, что
 
 Стоит заметить, что гибкость мультиязыкового анализатора позволяет учесть обе вышеперечисленные особенности,
 если имеется возможность вовлечения эвристик о предметной области анализа -- в первую очередь о языках и
-их возможных связях. Например, запуск решателя на всех ограничениях после изменения или дополнения некоторых файлов не всегда
+их возможных связях. Например, запуск средства решения ограничений на всех ограничениях после изменения или дополнения некоторых файлов не всегда
 необходим, так как такие файлы могут не изменять межъязыковые связи вовсе. Добавление таких эвристик
 часто присутствует в таких инструментах как LSP сервер и мультиязыковой анализ в данном случае не становится исключением.
 
@@ -220,9 +220,9 @@ API. Для данной задачи было разработано небол
 не описываются, так как это аспект реализации конкретного расширения для IDE.
 
 \begin{table}[H]
-    \caption{Команды для работы с мультиязыковым сервером LSP из Visual Studio Code}
+    \caption{\textbf{Команды для работы с мультиязыковым сервером LSP из Visual Studio Code}}
     \begin{tabular}{|p{4cm}|p{4cm}|p{7cm}|}
-    \hline Команда & Используемая информация & Описание команды \\ 
+    \hline \textbf{Команда} & \textbf{Используемая информация} & \textbf{Описание команды} \\ 
     \hline \texttt{crossy/configure} & Путь к проекту & Сбор информации об операционном окружении проекта \\
     \hline \texttt{crossy/translate} & Путь к онтологии & Трансляция кода проекта с сохранением полученных ограничений \\
     \hline \texttt{crossy/solve} & Путь к онтологии & Решение ограничений и сохранение полученной подстановки \\
