--- a/tex/80-conclusion.tex
+++ b/tex/80-conclusion.tex
@@ -1,6 +1,6 @@
 \Conclusion % заключение к отчёту
 
-В ходе данной работы было проведено исследование существующих методов мультязыкового анализа,
+В результате данной работы было выполнено исследование существующих методов мультязыкового анализа,
 выявлены их достоинства и недостатки. Проанализированы существующие инструменты поддержки разработчика,
 поддерживающие анализ множества языков и их связей.
 
