"everything was worth it"

--- a/tex/2-3-evaluation.tex
+++ b/tex/2-3-evaluation.tex
@@ -229,4 +229,45 @@ Numeric, Bool, Unit, String).
     \label{fig:lsp-diagnostics}
 \end{figure}
 
+\section{Анализ поддержки описанных сценариев в существующих инструментальных средствах}
+
+Для сравнительной оценки возможностей разработанного анализатора (и созданного метода) были рассмотренны соответствующие
+возможности современных инструментальных средств, а именно IDE. Выборка средств происходила исходя из индекса популярности
+существующих IDE \cite{top-ide}. Так как рассмотренные примеры проектов используют различные языки, решено было
+выбрать наиболее подходящие IDE, исходя из позиции в рассматриемом списке.
+
+Сравнительный анализ IDE и разработанного анализатора представлен в таблице \ref{ide-comparison}.
+\begin{table}[H]
+    \caption{\textbf{Анализ существующих IDE и анализатора}}
+    \resizebox{1 \textwidth}{!}{\begin{tabular}{|p{4cm}|p{7cm}|p{7cm}|}
+    \hline \textbf{Средство} & \textbf{Преимущества в сравнении с анализатором} & \textbf{Недостатки в сравнении с анализатором} \\ 
+    \hline Visual Studio 2022 + ReSharper & Поддержка большего количества сценариев LSP,
+    поддержка описанных сценариев (<<Go to definition/declaration>>, <<Type hierarchy>>),
+     поддержка рефакторингов на основе более полного семантического представления & 
+     Проприетарное, платное решение; ограниченная поддержка различных языков (3 основных и несколько DSL),  \\
+    \hline Visual Studio Code (плагины Golang и JavaScript) & Бесплатное, открытое решение; Хорошая интеграция
+    с инструментарием как Golang, так и JavaScript &
+    Отсутствие поддержки описанных сценариев (<<Rename symbol>>, <<Document diagnostics>>), слабая поддержка языкоспецифичных особенностей
+    (например, анализ путей веб-сервера для Golang) \\
+    \hline Clion 2023.1 & Поддержка основных систем сборки для C++ (cmake, make), поддержка большего количества сценариев LSP
+    для C++ & 
+    Проприетарное, платное решение; Отсутствие поддержки описанных сценариев (<<Completion>>, <<Signature help>>),
+    плохая совместимость с Python (только посредством плагина) \\
+    \hline Visual Studio Code (плагины С++ и Python) & Бесплатное, открытое решение; Широкий
+    набор инструментов для Python &
+    Отсутствие поддержки описанных сценариев (<<Go to definition/declaration>>, <<Type hierarchy>>) \\
+    \hline
+    \end{tabular}}\label{ide-comparison}
+\end{table}
+
+Как видно из таблицы, на данный момент не существует средств, реализующих функциональность разработанного мультиязыкового
+анализатора в полной мере. Расширение ReSharper реализует все сценарии LSP на мультиязыковом уровне, но
+его поддержка ограничена лишь тремя языками (C\#, Visual Basic, F\#). Остальные средства не 
+производят выявления межъязыковых связей обычно по двум причинам: либо средство слишком универсально
+(Visual Studio Code), либо слишком специализировано (Clion).
+
+Таким образом, разработанный анализатор является наиболее полным в отношении
+поддерживаемых мультиязыковых сценариев LSP, что подтверждает работоспособность
+метода и удовлетворяет выдвигаемые к нему требования.
+
 \clearpage
