--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -369,3 +369,12 @@ language =     "russian"
   urldate = {28.04.2024},
   language =     "russian"
 }
+
+@online{top-ide,
+  title = {Рейтинг популярности существующих IDE},
+  year = {2024},
+  url = {https://pypl.github.io/IDE.html},
+  urldate = {15.04.2024},
+  language =     "russian"
+}
+
