--- a/tex/2-3-evaluation.tex
+++ b/tex/2-3-evaluation.tex
@@ -238,7 +238,7 @@ Numeric, Bool, Unit, String).
 
 Сравнительный анализ IDE и разработанного анализатора представлен в таблице \ref{ide-comparison}.
 \begin{table}[H]
-    \caption{\textbf{Анализ существующих IDE и анализатора}}
+    \caption{\textbf{Сравнение существующих IDE и анализатора}}
     \resizebox{1 \textwidth}{!}{\begin{tabular}{|p{4cm}|p{7cm}|p{7cm}|}
     \hline \textbf{Средство} & \textbf{Преимущества в сравнении с анализатором} & \textbf{Недостатки в сравнении с анализатором} \\ 
     \hline Visual Studio 2022 + ReSharper & Поддержка большего количества сценариев LSP,
