--- a/tex/2-3-evaluation.tex
+++ b/tex/2-3-evaluation.tex
@@ -161,6 +161,9 @@ HTTP сервером, обеспечивающи обмен данными по
 Основной проблемой проекта является неявная связь между сетевыми путями сервера и клиента, а также
 отсутствие выраженной схемы данных, которыми они обмениваются.
 
+Вовлекаемые языки: Golang, JavaScript. Предположительные предметные области: веб-разработка, клиент-серверные системы.
+Рассмотренные парадигмы языков: Функциональные языки, языки разметки.
+
 \subsection{Окружение}
 
 В данном проекте не используется явное окружение, однако серверу требуется сетевой порт для возможности
