--- a/tex/80-conclusion.tex
+++ b/tex/80-conclusion.tex
@@ -1,8 +1,8 @@
 \Conclusion % заключение к отчёту
 
 В результате данной работы было выполнено исследование существующих методов мультязыкового анализа,
-выявлены их достоинства и недостатки. Проанализированы существующие инструменты поддержки разработчика,
-поддерживающие анализ множества языков и их связей.
+выявлены их достоинства и недостатки. Проанализированы пять существующих инструментов поддержки разработчика,
+поддерживающих анализ множества языков и их связей.
 
 Был разработан метод мультиязыкового статического анализа, позволяющий
 обеспечить инструментальные средства поддержки разработчика. Данный метод отвечает требованиям
